--- a/src/components/navbar/NavbarComp.module.css
+++ b/src/components/navbar/NavbarComp.module.css
@@ -2,6 +2,13 @@
   width: 100%;
 }
 
+.Nav {
+  position: fixed;
+  top: 0;
+  z-index: 1;
+  box-shadow: 0px 3px 5px rgb(105, 105, 105, 0.3);
+}
+
 @media screen and (max-width: 767px) {
   .logo {
     width: 40%;
@@ -10,6 +17,7 @@
   Nav {
     display: flex;
     flex-direction: row;
+    position: fixed;
   }
 }
 /* 
