--- a/src/components/Produit/ImageProduit.module.css
+++ b/src/components/Produit/ImageProduit.module.css
@@ -7,12 +7,11 @@
   margin: 0 25vw;
 }
 
+.imgModal {
+  float: left;
+}
+
 .button {
-  padding: 20px;
-  border-radius: 10px;
-  background-color: rgba(51, 117, 255, 0.938);
-  color: white;
-  font-size: 20px;
   translate: 0 -240%;
 }
 
