--- a/src/components/about/About.module.css
+++ b/src/components/about/About.module.css
@@ -1,11 +1,7 @@
-.font {
-  font-family: 'Montserrat';
-}
-
 .img_about {
+  margin-top: 200px;
   width: 20%;
   height: 20%;
-  /* border-radius: 50%; */
   box-shadow: 30px 30px 0px #d8d4d4;
 }
 
@@ -15,14 +11,15 @@
 } */
 
 h3 {
+  text-align: center !important;
   color: #e7742d;
   font-size: 30px;
   margin-top: 50px;
   margin-bottom: 40px;
 }
 
-p {
-  text-align: center;
+.center {
+  text-align: center !important;
   margin-left: auto;
   margin-right: auto;
   font-size: 20px;
