--- a/src/components/navbar/NavbarComp.module.css
+++ b/src/components/navbar/NavbarComp.module.css
@@ -3,9 +3,9 @@
 }
 
 .Nav {
-  position: fixed;
+  /* position: fixed;
   top: 0;
-  z-index: 1;
+  z-index: 1; */
   box-shadow: 0px 3px 5px rgb(105, 105, 105, 0.25);
 }
 
