--- a/src/components/services/Services.modules.css
+++ b/src/components/services/Services.modules.css
@@ -1,4 +1,4 @@
-h3 {
+.title {
   text-align: left;
   color: #e7742d;
   font-size: 30px;
@@ -6,7 +6,7 @@ h3 {
   margin-bottom: 40px;
 }
 
-p {
+.text {
   display: flex;
   flex-direction: row;
   text-align: left;
