--- a/src/components/about/About.module.css
+++ b/src/components/about/About.module.css
@@ -3,18 +3,17 @@
 }
 
 .img_about {
+  margin-top: 30px;
+
   width: 20%;
   height: 20%;
   /* border-radius: 50%; */
   box-shadow: 30px 30px 0px #d8d4d4;
 }
 
-/* h2 {
-    color: #e7742d;
-    font-size: 50px;
-} */
+.title_about {
+  text-align: center !important;
 
-h3 {
   color: #e7742d;
   font-size: 30px;
   margin-top: 50px;
@@ -25,6 +24,7 @@ p {
   text-align: center;
   margin-left: auto;
   margin-right: auto;
+  margin-bottom: 30px;
   font-size: 20px;
   color: #3965a1;
 }
