--- a/src/components/catalogue/Catalogue.module.css
+++ b/src/components/catalogue/Catalogue.module.css
@@ -2,12 +2,12 @@
   font-family: 'Montserrat';
 }
 
-h2 {
+.title2 {
   color: #e7742d;
   font-size: 70px;
 }
 
-h3 {
+.title3 {
   color: #e7742d;
   font-size: 40px;
 }
@@ -20,7 +20,7 @@ h3 {
   margin-right: 650px;
 }
 
-.gamme p {
+.subtitle2 {
   color: #3965a1;
   font-size: 25px;
   margin-bottom: 30px;
