--- a/src/components/footer/Footer.module.css
+++ b/src/components/footer/Footer.module.css
@@ -1,17 +1,16 @@
-footer {
+.footer {
   background-color: #3965a1;
-  position: static;
   bottom: 0;
   left: 0;
   width: 100vw;
   padding: 1em;
-  margin-right: -1em;
+  /* margin-right: -1em; */
 }
 
-body {
+/* body {
   margin: auto;
   min-height: 100vh;
-}
+} */
 
 .partners {
   width: 80%;
