--- a/src/components/navbar/NavbarComp.module.css
+++ b/src/components/navbar/NavbarComp.module.css
@@ -3,10 +3,11 @@
 }
 
 .Nav {
-  position: fixed;
+  /* position: fixed;
   top: 0;
   z-index: 10;
-  box-shadow: 0px 3px 5px rgb(105, 105, 105, 0.25);
+  box-shadow: 0px 3px 5px rgb(105, 105, 105, 0.25); */
+  width: 100vw;
 }
 
 @media screen and (max-width: 767px) {
