--- a/src/components/catalogue/Catalogue.module.css
+++ b/src/components/catalogue/Catalogue.module.css
@@ -16,8 +16,8 @@
   color: #3965a1;
   font-size: 40px;
   margin-bottom: 30px;
-  margin-left: 650px;
-  margin-right: 650px;
+  margin-left: 65px;
+  margin-right: 65px;
 }
 
 .subtitle2 {
@@ -35,10 +35,7 @@
 .gamme {
   background-color: #e2f2f2;
   margin-top: 70px;
-  padding-left: 70px;
-  padding-right: 40px;
-  padding-bottom: 60px;
-  padding-top: 40px;
+  padding: 40px 40px 60px 70px;
   z-index: 1;
 }
 
