--- a/src/contact/contact.module.css
+++ b/src/contact/contact.module.css
@@ -6,19 +6,19 @@
 .col {
   text-align: center;
 }
-.h1 {
+.title1 {
   color: #3f71a6;
   font-size: 2.9vw;
   margin-bottom: 15px;
 }
 
-.h3 {
+.title3 {
   color: #3f71a6;
   font-size: 1.3vw;
   margin: 0;
 }
 
-.p {
+.text {
   color: #dd7942;
   font-size: 1.3vw;
 }
