--- a/src/components/landingPage/LandingPage.module.css
+++ b/src/components/landingPage/LandingPage.module.css
@@ -1,15 +1,15 @@
 .rotate {
   margin-top: 120px;
-  animation: rotation 2s infinite linear;
+  animation: rotation 2s linear;
 }
 
 @keyframes rotation {
   from {
     -webkit-transform-origin: bottom;
-    -webkit-transform: rotate(0deg);
+    -webkit-transform: rotate(90deg);
   }
   to {
-    -webkit-transform: rotate(360deg);
+    -webkit-transform: rotate(0deg);
   }
 }
 
