--- a/src/components/landingPage/LandingPage.module.css
+++ b/src/components/landingPage/LandingPage.module.css
@@ -1,13 +1,13 @@
-.rotate {
-  margin-top: 20vh;
-  margin-left: 45vw;
-  animation: rotation 1s linear;
+.wrapper {
+  position: absolute;
+  margin-top: 40vh;
+  margin-left: 20vw;
 }
 
-.logo {
-  margin-top: 3vh;
-  margin-left: 35vw;
-  /* animation: slideOut 1.5s linear; */
+.rotate {
+  float: right;
+  translate: -410%;
+  animation: rotation 1s linear;
 }
 
 @keyframes rotation {
@@ -17,16 +17,5 @@
   }
   to {
     -webkit-transform: rotate(0deg);
-    /* -webkit-transform: translate(-200%, -120%); */
-  }
-}
-
-@keyframes slideOut {
-  from {
-    -webkit-transform-origin: bottom;
-    -webkit-transform: translateX(0%);
-  }
-  to {
-    -webkit-transform: translate(-120%, -240%);
   }
 }
