--- a/src/components/Produit/Description.module.css
+++ b/src/components/Produit/Description.module.css
@@ -1,7 +1,7 @@
 .container {
-  display: inline-block;
-  width: 95vw;
-  height: auto;
+  /* display: inline-block; */
+  /* width: 95vw; */
+  /* height: auto; */
   padding: 20px 10px;
   margin: 10px;
 }
