--- a/src/components/Produit/Produits.module.css
+++ b/src/components/Produit/Produits.module.css
@@ -1,3 +1,13 @@
 .title {
   margin-bottom: 30px;
+  margin-top: 30px;
+}
+
+.demande {
+  background-color: #3965a1;
+}
+
+.demande:hover {
+  opacity: 0.8;
+  background-color: #3965a1;
 }
