--- a/src/components/newsletter/Newsletter.module.css
+++ b/src/components/newsletter/Newsletter.module.css
@@ -2,6 +2,11 @@
   background-color: #3965a1;
 }
 
+.newsButton:hover {
+  opacity: 0.8;
+  background-color: #3965a1;
+}
+
 .hr {
   width: 98%;
 }
