--- a/src/components/catalogue/Catalogue.module.css
+++ b/src/components/catalogue/Catalogue.module.css
@@ -18,6 +18,7 @@
   margin-bottom: 30px;
   margin-left: 65px;
   margin-right: 65px;
+  font-family: 'Montserrat', 'sans-serif';
 }
 
 .subtitle2 {
