--- a/src/contact/contact.module.css
+++ b/src/contact/contact.module.css
@@ -1,5 +1,5 @@
 .div {
-  background: center / cover url('./background_contact.jpg');
+  background: center / cover url('./contactus.jpg');
   padding-top: 160px;
   min-height: 70vh;
 }
@@ -7,33 +7,41 @@
   text-align: center;
 }
 .title1 {
-  color: #3f71a6;
+  color: white;
   font-size: 2.9vw;
+  /* font-weight: lighter; */
   margin-bottom: 15px;
+  width: 30vw;
 }
 
 .title3 {
-  color: #3f71a6;
+  color: white;
   font-size: 1.3vw;
+  font-weight: lighter;
   margin: 0;
 }
 
 .text {
-  color: #dd7942;
+  color: white;
   font-size: 1.3vw;
+  font-weight: lighter;
 }
 
 .input {
   margin-top: 20px;
+  background: transparent;
+  border: none;
+  border-bottom: 1px solid white;
+  border-radius: 0px;
 }
 
 .input button {
   margin-top: 20px;
-  background-color: #dd7942;
+  /* background-color: #dd7942; */
   border: none;
 }
 
 .input button:hover {
   opacity: 0.8;
-  background-color: #dd7942;
+  /* background-color: #dd7942; */
 }
