--- a/src/components/footer/Footer.module.css
+++ b/src/components/footer/Footer.module.css
@@ -1,24 +1,20 @@
 footer {
-  background-color: #3965a1;
-  position: static;
-  bottom: 0;
-  left: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  background: white;
+
   width: 100vw;
   padding: 1em;
   margin-right: -1em;
 }
 
-body {
-  margin: auto;
-  min-height: 100vh;
-}
-
 .partners {
-  width: 80%;
-  display: flex;
-  align-items: flex-end !important;
+  width: 10vw;
+  height: 15vh;
 }
 
 .footertext {
-  color: white !important;
+  justify-content: center;
+  color: black;
 }
