footer css ok and added link to linkedin devs

--- a/src/components/footer/Footer.module.css
+++ b/src/components/footer/Footer.module.css
@@ -3,10 +3,21 @@ footer {
   flex-direction: column;
   justify-content: center;
   background: white;
-
   width: 100vw;
   padding: 1em;
   margin-right: -1em;
+}
+
+.signature {
+  margin: 2vh 0 0 0;
+}
+
+.signature a {
+  color: orange;
+}
+
+.signature a:visited {
+  color: lightblue;
 }
 
 .partners {
