--- a/src/components/Produit/Description.module.css
+++ b/src/components/Produit/Description.module.css
@@ -2,13 +2,23 @@
   /* display: inline-block; */
   /* width: 95vw; */
   /* height: auto; */
-  padding: 20px 10px;
-  margin: 10px;
+  /* padding: 20px 10px;
+  margin: 10px; */
+  padding: 20px;
+  width: 90vw;
+  border-radius: 20px;
+  min-height: 200px;
 }
+
+/* .col {
+  margin: 5px;
+} */
 
 .picture {
   border-radius: 20px;
+  margin: 10px;
 }
+
 .title {
   font-size: 20px;
   margin: 10px;
