--- a/src/components/about/About.module.css
+++ b/src/components/about/About.module.css
@@ -1,9 +1,14 @@
 .img_about {
   margin-top: 30px;
 
-  width: 20%;
-  height: 20%;
+  width: 80%;
+  /* height: 20%; */
   box-shadow: 30px 30px 0px #d8d4d4;
+}
+
+p {
+  margin-left: 2rem;
+  margin-right: 2rem;
 }
 
 .title_about {
