modified,css product/page unless shadows

--- a/src/components/Produit/Description.module.css
+++ b/src/components/Produit/Description.module.css
@@ -20,7 +20,7 @@
   border-radius: px;
   margin: 10px;
   width: 30vw;
-  box-shadow: 1px 1px 12px #555;
+  /* box-shadow: 1px 1px 12px #555; */
 }
 
 .title {
