--- a/src/components/catalogue/Catalogue.module.css
+++ b/src/components/catalogue/Catalogue.module.css
@@ -1,3 +1,8 @@
+.sectionImgText {
+  background-color: #3965a1;
+  min-height: 40vw;
+}
+
 .title2 {
   color: #e7742d;
   font-size: 70px;
@@ -6,13 +11,14 @@
 
 .title3 {
   color: #e7742d;
-  font-size: 40px;
+  font-size: 30px;
 }
 
 .subtitle {
   color: #3965a1;
-  font-size: 40px;
-  margin-bottom: 30px;
+  font-size: 35px;
+  margin-top: 20px;
+  margin-bottom: 60px;
   margin-left: 65px;
   margin-right: 65px;
   font-family: 'Montserrat', 'sans-serif';
@@ -20,18 +26,19 @@
 
 .subtitle2 {
   color: #3965a1;
-  font-size: 25px;
+  font-size: 20px;
   margin-bottom: 30px;
 }
 
 .trouvez {
   background-color: #3965a1;
   color: white;
-  font-size: 25px;
+  font-size: 20px;
 }
 .sectionImgText {
   display: flex;
-  margin: 5vw;
+  padding-top: 5vh;
+  padding-bottom: 5vh;
   height: 60vh;
 }
 .gamme {
@@ -48,8 +55,28 @@
   z-index: 1;
 }
 .inclinaison {
-  box-shadow: 20px 20px 10px #d4d0d0;
+  box-shadow: 25px 25px 0px #d4d0d0;
   width: 40vw;
-  margin-left: 10vw;
+  /* margin-left: 10vw; */
   z-index: 10;
+}
+
+@media screen and (min-width: 992px) and (max-width: 1290px) {
+  .title3 {
+    font-size: 25px;
+  }
+
+  .subtitle2 {
+    font-size: 15px;
+  }
+
+  .trouvez {
+    font-size: 15px;
+  }
+}
+
+@media screen and (max-width: 1000px) {
+  .subtitle {
+    font-size: 25px;
+  }
 }
