link between product page & styling

--- a/src/components/services/Services.module.css
+++ b/src/components/services/Services.module.css
@@ -1,7 +1,7 @@
 .title1 {
   font-size: 40px;
   text-align: center;
-  color: #e7742d;
+  color: #3965a1;
   margin-top: 100px;
   margin-bottom: 40px;
 }
