--- a/src/components/Produit/Produits.module.css
+++ b/src/components/Produit/Produits.module.css
@@ -1,7 +1,7 @@
 .title {
   margin-bottom: 40px;
   margin-top: 60px;
-  color: #dd7942;
+  color: #3965a1;
   font-size: 50px;
   /* margin-bottom: 30px;
   margin-top: 30px; */
