--- a/src/components/catalogue/Catalogue.module.css
+++ b/src/components/catalogue/Catalogue.module.css
@@ -1,7 +1,8 @@
 .title2 {
   color: #3965a1;
-  font-size: 70px;
-  margin-top: 5vh;
+  font-size: 6vh;
+  margin-top: 7vh;
+  margin-bottom: 7vh;
 }
 
 .title3 {
