--- a/src/components/landingPage/LandingPage.module.css
+++ b/src/components/landingPage/LandingPage.module.css
@@ -1,16 +1,21 @@
 .wrapper {
   margin-top: 40vh;
-  margin-left: 25vw;
+  margin-left: 40vw;
 }
 
 .rotate {
-  animation: rotation 1s linear;
+  rotate: 20deg;
+  animation: rotation 1s ease-in-out;
 }
 
 @keyframes rotation {
   from {
-    -webkit-transform-origin: bottom;
-    -webkit-transform: rotate(90deg);
+    -webkit-transform-origin: bottom left;
+    -webkit-transform: translate(0% 0%);
+    -webkit-transform: rotate(110deg);
+  }
+  75% {
+    -webkit-transform: translate(0% -100%);
   }
   to {
     -webkit-transform: rotate(0deg);
