--- a/src/components/about/About.module.css
+++ b/src/components/about/About.module.css
@@ -1,7 +1,6 @@
 .img_about {
-  margin-top: 215px;
+  margin-top: 20vh;
   width: 35%;
-
   width: 85%;
   box-shadow: 10px 10px 0px lightblue;
 }
@@ -9,7 +8,7 @@
 .text {
   margin-left: 2rem;
   margin-right: 7rem;
-  padding-top: 40px;
+  margin-top: 15vh;
 }
 
 .title_about {
@@ -18,14 +17,30 @@
   font-size: 40px;
   margin-top: 70px;
   margin-bottom: 40px;
-  margin-right: 7rem;
 }
 
 .justify {
-  text-align: justify !important;
-  margin-left: auto;
-  margin-right: auto;
-  margin-bottom: 30px;
   font-size: 20px;
-  color: black;
+}
+
+@media screen and (max-width: 1500px) {
+  .img_about {
+    margin-top: 15vh;
+  }
+  .text {
+    margin-top: 3vh;
+    margin-left: 0;
+    margin-right: 0;
+  }
+}
+
+@media screen and (max-width: 870px) {
+  .img_about {
+    margin-top: 5vh;
+  }
+  .text {
+    margin-top: 3vh;
+    margin-left: 0;
+    margin-right: 0;
+  }
 }
