--- a/src/components/navbar/NavbarComp.module.css
+++ b/src/components/navbar/NavbarComp.module.css
@@ -5,6 +5,8 @@
 .Nav {
   box-shadow: 0px 3px 5px rgb(105, 105, 105, 0.25);
   width: 100%;
+  position: fixed !important;
+  z-index: 500 !important;
 }
 
 @media screen and (max-width: 767px) {
@@ -12,7 +14,7 @@
     width: 40%;
   }
 
-  Nav {
+  .Nav {
     display: flex;
     flex-direction: row;
     position: fixed;
