--- a/src/components/about/About.module.css
+++ b/src/components/about/About.module.css
@@ -1,46 +1,24 @@
 .img_about {
-  margin-top: 30px;
-
+  margin: auto;
   width: 85%;
   box-shadow: 15px 15px 0px lightblue;
 }
 
 .text {
-  margin-left: 2rem;
-  margin-right: 7rem;
-  margin-top: 15vh;
+  /* margin-left:10px;
+  margin-right: 10px; */
 }
 
 .title_about {
   text-align: center !important;
   color: #3965a1;
   font-size: 40px;
-  margin-top: 70px;
-  margin-bottom: 40px;
+  margin-top: 20px;
 }
 
 .justify {
   font-size: 20px;
-}
-
-@media screen and (max-width: 1500px) {
-  .img_about {
-    margin-top: 15vh;
-  }
-  .text {
-    margin-top: 3vh;
-    margin-left: 0;
-    margin-right: 0;
-  }
-}
-
-@media screen and (max-width: 870px) {
-  .img_about {
-    margin-top: 5vh;
-  }
-  .text {
-    margin-top: 3vh;
-    margin-left: 0;
-    margin-right: 0;
-  }
+  margin-top: 200px;
+  margin-bottom: 100px;
+  text-align: center;
 }
