--- a/src/components/newsletter/Newsletter.module.css
+++ b/src/components/newsletter/Newsletter.module.css
@@ -43,7 +43,7 @@
 
 .newsForm {
   margin-top: 40px;
-  margin-bottom: 20px;
+  /* margin-bottom: 20px; */
   padding-top: 60px;
   padding-bottom: 60px;
   display: flex;
